# WebRTCVideoCall

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  resource.qrc  todo.md
FunASRServer/: funasr_wss_server.py  funasr_wss_server_simple.py
WebRTCClient/: CMakeLists.txt  Info.plist.in
WebRTCClient/qml/: AsrPanel.qml  MovableVideoItem.qml
WebRTCClient/src/: AudioCapturer.cpp  AudioPlayer.h  AudioReceiver.h  ClientInfo.cpp  ClientInfo.h  ClientWorker.cpp  ClientWorker.h  Controller.cpp  Controller.h  GestureInfer.cpp  GestureInfer.h  Logger.cpp  Logger.h  MediaController.cpp  MediaController.h  SegInfer.cpp  SegInfer.h  VideoCapturer.cpp  VideoCapturer.h  VideoProcesser.cpp  VideoProcesser.h  VideoReceiver.cpp  WebRTCClient.cpp  WebRTCClient.h  WebRTCVideoSource.cpp  WebRTCVideoSource.h  config.h  i420render.h  main.cpp  requestPermissions.h  requestPermissions.mm  util.cpp  util.h  videoitem.cpp
WebRTCClientServer/: CMakeLists.txt  IceServerConfig.cpp  IceServerConfig.h  SignalingServer.cpp  SignalingServer.h  main.cpp
deploy/: docker-compose.yml
deploy/coturn/: env.example  turnserver.conf
qml/: FramelessWindow.qml  GestureLayer.qml  Main.qml  MessagePanel.qml  RiseImage.qml
scripts/: setup-turn-cloud.sh  setup-turn-local.sh  start-webrtc-server.sh
src/: AsrClient.cpp  AsrClient.h  AudioCapturer.cpp  AudioCapturer.h  AudioPlayer.cpp  AudioProcesser.cpp  AudioProcesser.h  AudioReceiver.cpp  ClientWorker.cpp  ClientWorker.h  Controller.cpp  Controller.h  GestureInfer.cpp  GestureInfer.h  Logger.h  MediaController.cpp  MediaController.h  SegInfer.h  VideoCapturer.cpp  VideoCapturer.h  VideoProcesser.cpp  VideoProcesser.h  VideoReceiver.h  WebRTCClient.cpp  WebRTCClient.h  YoloV10Infer.cpp  YoloV10Infer.h  i420render.cpp  main.cpp  videoitem.h
ssl_key/: server.crt  server.key
webrtc-audio-processing/lib/pkgconfig/: webrtc-audio-processing-2.pc
